[tool.poetry]
name = "misskist"
version = "0.1.0"
description = ""
authors = ["tuna2134 <me@tuna2134.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
sphinx = "^7.2.6"
furo = "^2023.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
